--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins:wght@300&display=swap');
 
 body {
-  font-family:'Poppins', sans-serif;
+  font-family: 'Poppins', sans-serif;
   background-color: #041562;
 }
 
@@ -121,12 +121,27 @@ input:checked + label {
   justify-content: center;
 }
 
-#mapa {
+#ver-mapa button {
+  width: 80px;
+  height: 40px;
+  border-radius: 20px;
+  background: transparent;
   border: 2px solid white;
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  margin: 10px 0;
 }
 
-@media (max-width: 360px) {
+@media (max-width: 560px) {
   .tarjetas, .tarjetas-ataques {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 300px) {
+  #ver-mapa div {
+    display: flex;
+    align-items: center;
     flex-direction: column;
   }
 }
